# argus

./: .gitignore  Cargo.toml  Dockerfile  README.md  default.nix
.github/workflows/: build.yml
docs/: argus.vhs
src/: main.rs
