[package]
name = "argus"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/jpetrucciani/argus"
readme = "README.md"
license = "MIT"
description = """
A fast and simple HTTP request logger!
"""

[dependencies]
axum = "0.6"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"
mime = "0.3"
prometheus = "0.13"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
